Modify the backlog and update the README.md